--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,17 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
 body {
-  margin: 2em;
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  margin: 0;
+  padding: 15px;
+  background: #02A8F4;
+  display: block;
 }
  /*
   * See https://github.com/angular/angular.io/blob/master/public/docs/_examples/styles.css
